Fix overlapping location texdt

--- a/components/event/index.css
+++ b/components/event/index.css
@@ -52,7 +52,7 @@
 }
 
 .Event-details {
-  max-width: 60%;
+  max-width: calc(100% - 10rem);
   position: absolute;
   right: 1.5rem;
   bottom: 1.6rem;
