--- a/components/tablist/index.css
+++ b/components/tablist/index.css
@@ -55,7 +55,7 @@
 }
 
 .Tablist-link:hover {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.55);
 }
 
 .Tablist-link:focus-visible {
